@@ -9,7 +9,7 @@ Gem::Specification.new do |s|
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["John Mettraux"]
-  s.date = %q{2010-04-27}
+  s.date = %q{2010-05-12}
   s.description = %q{
 something at the intersection of Rails3, CouchDB and rufus-jig
   }
@@ -78,23 +78,23 @@ something at the intersection of Rails3, CouchDB and rufus-jig
     s.specification_version = 3
 
     if Gem::Version.new(Gem::RubyGemsVersion) >= Gem::Version.new('1.2.0') then
-      s.add_runtime_dependency(%q<activerecord>, ["~> 3.0.0.beta2"])
-      s.add_runtime_dependency(%q<rufus-jig>, [">= 0.1.17"])
+      s.add_runtime_dependency(%q<activerecord>, ["~> 3.0.0.beta3"])
+      s.add_runtime_dependency(%q<rufus-jig>, [">= 0.1.18"])
       s.add_runtime_dependency(%q<mime-types>, [">= 1.16"])
       s.add_development_dependency(%q<rake>, [">= 0"])
       s.add_development_dependency(%q<yard>, [">= 0"])
       s.add_development_dependency(%q<jeweler>, [">= 0"])
     else
-      s.add_dependency(%q<activerecord>, ["~> 3.0.0.beta2"])
-      s.add_dependency(%q<rufus-jig>, [">= 0.1.17"])
+      s.add_dependency(%q<activerecord>, ["~> 3.0.0.beta3"])
+      s.add_dependency(%q<rufus-jig>, [">= 0.1.18"])
       s.add_dependency(%q<mime-types>, [">= 1.16"])
       s.add_dependency(%q<rake>, [">= 0"])
       s.add_dependency(%q<yard>, [">= 0"])
       s.add_dependency(%q<jeweler>, [">= 0"])
     end
   else
-    s.add_dependency(%q<activerecord>, ["~> 3.0.0.beta2"])
-    s.add_dependency(%q<rufus-jig>, [">= 0.1.17"])
+    s.add_dependency(%q<activerecord>, ["~> 3.0.0.beta3"])
+    s.add_dependency(%q<rufus-jig>, [">= 0.1.18"])
     s.add_dependency(%q<mime-types>, [">= 1.16"])
     s.add_dependency(%q<rake>, [">= 0"])
     s.add_dependency(%q<yard>, [">= 0"])
